# libaatm

./: .travis.yml  CMakeLists.txt  README.md  VERSION
.github/workflows/: test.yml
src/: .template  ATM_VERSION  CMakeLists.txt
src/libaatm/: ATM.cpp  CMakeLists.txt
src/libaatm/include/: ATMAngle.h  ATMCommon.h  ATMException.h  ATMFrequency.h  ATMInverseLength.h  ATMLength.h  ATMMassDensity.h  ATMNumberDensity.h  ATMOpacity.h  ATMPercent.h  ATMPressure.h  ATMProfile.h  ATMRefractiveIndex.h  ATMRefractiveIndexProfile.h  ATMSkyStatus.h  ATMSpectralGrid.h  ATMTemperature.h  ATMWaterVaporRadiometer.h
src/libaatm/src/: ATMProfile.cpp  ATMRefractiveIndex.cpp  ATMRefractiveIndexProfile.cpp  ATMSkyStatus.cpp  ATMSpectralGrid.cpp  ATMWVRMeasurement.cpp  ATMWaterVaporRadiometer.cpp
src/test/: ATMVersionTest.cpp  AbInitioTest.cpp  ApexTest.cpp  AtmBasicTest.cpp  AtmProfileTest.cpp  CMakeLists.txt  LengthTest.cpp  RefractiveIndexProfileTest.cpp  SMATest.cpp  SkyStatusTest.cpp  SkyStatusTest_TINV.cpp  SpectralGridTest.cpp  atm651.cpp  testError.cpp
